packages/svelte/tests/compiler-errors/samples/else-if-before-closing-2/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'invalid-elseif-placement',
		message: 'Expected to close <p> tag before seeing {:else if ...} block',
		position: [25, 25]
	}
});
